js/src/tests/test262/built-ins/Error/prototype/toString/S15.11.4.4_A2.js
var
err1
=
new
Error
(
"
Error
"
)
;
try
{
var
toStr
=
err1
.
toString
(
)
;
}
catch
(
e
)
{
ERROR
(
'
#
1
:
var
err1
=
new
Error
(
"
Error
"
)
;
var
toStr
=
err1
.
toString
(
)
;
lead
to
throwing
exception
.
Exception
is
'
+
e
)
;
}
if
(
toStr
=
=
=
undefined
)
{
ERROR
(
'
#
2
:
var
err1
=
new
Error
(
"
Error
"
)
;
var
toStr
=
err1
.
toString
(
)
;
toStr
!
=
=
undefined
.
Actual
:
'
+
toStr
)
;
}
reportCompare
(
0
0
)
;
